6392835 move driver central to usr/src 6392843 move driver socal to usr/src 6393456 move driver pcic to usr/src 6393457 move driver pem to usr/src 6393459 move driver envctrltwo to usr/src 6393461 move driver lombus to usr/src 6393465 move driver rmclomv to usr/src 6393468 move driver wrsmd to usr/src 6438236 cfgadm plugins for ac & sysctrl want to be reunited with their drivers in usr/src 6443714 CardBus driver should be moved from usr/closed to usr/src

--- a/usr/src/Makefile
+++ b/usr/src/Makefile
@@ -276,7 +276,7 @@ EXPORT_SRC:
 	@cd uts/sun4u/boston;	pwd;	$(MAKE) EXPORT_SRC
 	@cd uts/sun4u/seattle;	pwd;	$(MAKE) EXPORT_SRC
 	@cd uts/sun4u/littleneck;	pwd;	$(MAKE) EXPORT_SRC
-	@cd $(CLOSED)/uts/sun4u/lw2plus;	pwd;	$(MAKE) EXPORT_SRC
+	@cd uts/sun4u/lw2plus;	pwd;	$(MAKE) EXPORT_SRC
 	@cd uts/sun4u/lw8;	pwd;	$(MAKE) EXPORT_SRC
 	@cd uts/sun4u/mpxu;	pwd;	$(MAKE) EXPORT_SRC
 	@cd uts/sun4u/opl;      pwd;    $(MAKE) EXPORT_SRC
