--- a/usr/src/uts/i86pc/Makefile.i86pc.shared
+++ b/usr/src/uts/i86pc/Makefile.i86pc.shared
@@ -265,6 +265,7 @@ DRV_KMODS	+= cpc
 DRV_KMODS	+= mc-amd
 DRV_KMODS	+= power
 DRV_KMODS	+= tzmon
+DRV_KMODS	+= pcic
 
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= audiovia823x
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= audioens
@@ -276,7 +277,6 @@ $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= elxl
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= iprb
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= memtest
 $(CLOSED_BUILD)CLOSED_DRV_KMODS_32	+= ncrs
-$(CLOSED_BUILD)CLOSED_DRV_KMODS		+= pcic
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= pcn
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= rtls
 $(CLOSED_BUILD)CLOSED_DRV_KMODS_32	+= sbpro
