--- a/usr/src/uts/sun4u/Makefile.sun4u.shared
+++ b/usr/src/uts/sun4u/Makefile.sun4u.shared
@@ -180,10 +180,10 @@ IMPLEMENTATIONS		+= sunfire .WAIT
 IMPLEMENTATIONS		+= lw8 .WAIT
 IMPLEMENTATIONS		+= makaha .WAIT
 IMPLEMENTATIONS		+= opl .WAIT
+IMPLEMENTATIONS		+= lw2plus .WAIT
 
 $(CLOSED_BUILD)CLOSED_IMPLEMENTATIONS	= chalupa .WAIT
 $(CLOSED_BUILD)CLOSED_IMPLEMENTATIONS	+= ents .WAIT
-$(CLOSED_BUILD)CLOSED_IMPLEMENTATIONS	+= lw2plus .WAIT
 
 #
 #	machine specific optimization, override default in Makefile.master
@@ -392,17 +392,17 @@ DRV_KMODS	+= trapstat
 DRV_KMODS	+= dmfe
 DRV_KMODS	+= rmc_comm
 DRV_KMODS	+= rmcadm
+DRV_KMODS	+= rmclomv
+DRV_KMODS	+= wrsmd
 
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= ctsmc
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= i2bsc 
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= m1535ppm
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= memtest
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= mi2cv
-$(CLOSED_BUILD)CLOSED_DRV_KMODS	+= rmclomv
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= scmi2c
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= sf
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= smbus_ara
-$(CLOSED_BUILD)CLOSED_DRV_KMODS	+= wrsmd
 
 #
 #	Exec Class Modules (/kernel/exec):
