PSARC 2006/394 Solaris audio driver for Munich Workstation 6415300 Need ALC880/885 HDA codec support (audio) for NVidia MCP55 chipset

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -372,6 +372,8 @@ AUDIOVIA823X_OBJS += audiovia823x.o
 
 AUDIO810_OBJS += audio810.o
 
+AUDIOHD_OBJS +=	audiohd.o
+
 AUDIOTS_OBJS +=	audiots.o
 
 CARDBUS_OBJS += cardbus.o cardbus_hp.o cardbus_cfg.o
