--- a/usr/src/uts/i86pc/Makefile.i86pc.shared
+++ b/usr/src/uts/i86pc/Makefile.i86pc.shared
@@ -251,6 +251,7 @@ DRV_KMODS	+= fdc
 DRV_KMODS	+= kb8042
 DRV_KMODS	+= pci-ide
 DRV_KMODS	+= audio810
+DRV_KMODS	+= audiohd
 
 DRV_KMODS_32	+= dnet
 DRV_KMODS	+= logi
