6425012 LDoms CPU DR should be enhanced to interact with RCM

--- a/usr/src/cmd/Makefile
+++ b/usr/src/cmd/Makefile
@@ -449,6 +449,7 @@ i386_SUBDIRS=		\
 sparc_SUBDIRS=		\
 	cvcd		\
 	dcs		\
+	drd		\
 	fruadm		\
 	oplhpd		\
 	prtdscp		\
@@ -750,6 +751,7 @@ MANIFEST_TOPDIRS=			\
 	cron				\
 	cvcd				\
 	dispadmin			\
+	drd				\
 	dumpadm				\
 	eeprom				\
 	fm				\
