--- a/usr/src/uts/sun4v/Makefile.files
+++ b/usr/src/uts/sun4v/Makefile.files
@@ -146,7 +146,8 @@ VDS_OBJS	= vds.o
 #			Misc modules
 #
 BOOTDEV_OBJS	+= bootdev.o
-DR_CPU_OBJS	+= dr_cpu.o dr_util.o
+DR_CPU_OBJS	+= dr_cpu.o
+DRCTL_OBJS	= drctl.o drctl_impl.o dr_util.o
 DS_OBJS		= ds.o
 FAULT_ISO_OBJS	= fault_iso.o
 OBPSYM_OBJS	+= obpsym.o obpsym_1275.o
