PSARC/2006/248 Nemo MAC-Type Plugin Architecture PSARC/2006/249 Nemo Changes for Binary Compatibility 6226635 MAC stats interface could cause problems with binary compatibility 6242059 nemo drivers must not know the size of the mac_t structure 6384371 GLDv3 only supports Ethernet 6401695 xge uses a receive ring even though it doesn't do blanking 6432471 panic in dls_close() if DL_BIND_REQ previously failed

--- a/usr/src/uts/Makefile.targ
+++ b/usr/src/uts/Makefile.targ
@@ -191,6 +191,9 @@ $(ROOT_MACH_DIR)/%:	$(OBJS_DIR)/% $(ROOT_MACH_DIR) FRC
 $(ROOT_FONT_DIR)/%:	$(OBJS_DIR)/% $(ROOT_MOD_DIR) $(ROOT_FONT_DIR) FRC
 	$(INS.file)
 
+$(ROOT_MAC_DIR)/%:	$(OBJS_DIR)/% $(ROOT_MOD_DIR) $(ROOT_MAC_DIR) FRC
+	$(INS.file)
+
 $(USR_DRV_DIR)/%:	$(OBJS_DIR)/% $(USR_DRV_DIR) FRC
 	$(INS.file)
 
