--- a/usr/src/uts/intel/Makefile.intel.shared
+++ b/usr/src/uts/intel/Makefile.intel.shared
@@ -569,3 +569,8 @@ DACF_KMODS	+= usb_ac_dacf
 #	Performance Counter BackEnd modules (/usr/kernel/pcbe)
 #
 PCBE_KMODS	+= p123_pcbe p4_pcbe opteron_pcbe
+
+#
+#	MAC-Type Plugin Modules (/kernel/mac)
+#
+MAC_KMODS	+= mac_ether
