PSARC 2005/441 iSCSI Target 6392513 Need iSCSI Target for Solaris

--- a/usr/src/cmd/Makefile
+++ b/usr/src/cmd/Makefile
@@ -199,6 +199,7 @@ COMMON_SUBDIRS=		\
 	ipf		\
 	isainfo		\
 	isalist		\
+	iscsi		\
 	java		\
 	join		\
 	kbd		\
@@ -555,6 +556,7 @@ MSGSUBDIRS=		\
 	hostname	\
 	id		\
 	isaexec		\
+	iscsi		\
 	join		\
 	krb5		\
 	kstat		\
