--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -154,6 +154,7 @@ COMMON_SUBDIRS = \
 	cmd/ipcs \
 	cmd/isaexec \
 	cmd/isalist \
+	cmd/iscsi \
 	cmd/join \
 	cmd/kbd \
 	cmd/killall \
@@ -410,7 +411,7 @@ sparc_SUBDIRS= \
 	cmd/datadm \
 	cmd/dcs \
 	cmd/drd \
-	cmd/fruadm \
+'ve	cmd/fruadm \
 	cmd/prtdscp \
 	cmd/prtfru \
 	cmd/sckmd \
