6256649 the boot-archive check should not trip over changes in devid-cache 6375429 bootadm: don't run tmpfs (and the system) out of memory 6389053 Oracle RAC defines "uadmin 1 1" as reboot command and trips over boot archive check after reset 6401926 new-boot KU can not be applied from pre new-boot (gzip-less) miniroot 6402084 bootadm: create_ramdisk -R "/bad idea" doesn't work 6414167 root_archive needs to move to usr/sbin and be delivered on all architectures 6414179 solaris.xpm can be dropped from the boot-archive 6415092 /lib/svc/method/boot-archive complains after a panic and asks to clear system/boot-archive 6419989 bootadm misbehaving on a large zfs root filesystem 6424611 XXX's in uadmin are disconcerting 6440562 "bootadm update-archive" should sanit check archive before moving it into place 6441220 new-boot related code in milestone/fs-local can move to boot-archive-update 6441901 root_archive doesn't clean up when cancelled

--- a/usr/src/cmd/Makefile
+++ b/usr/src/cmd/Makefile
@@ -778,6 +778,7 @@ MANIFEST_TOPDIRS=			\
 	zoneadmd
 
 MANIFEST_SUBDIRS=			\
+	boot/scripts			\
 	cmd-crypto/scripts		\
 	cmd-inet/usr.lib/in.chargend	\
 	cmd-inet/usr.lib/in.daytimed	\
