6447460 gcc trips over spurious static in bootadm.c 6447688 bootadm build should generate .o so gcc shadow build will check it 6447736 create_ramdisk -R "/bad idea" breaks Install kernel support

--- a/usr/src/cmd/boot/bootadm/Makefile
+++ b/usr/src/cmd/boot/bootadm/Makefile
@@ -31,6 +31,9 @@ i386_DATA= filelist.ramdisk filelist.safe
 
 SBINLINKS= $(PROG)
 
+OBJS = bootadm.o
+SRCS = $(OBJS:.o=.c)
+
 include ../Makefile.com
 
 ROOTBOOTSOLARISDATA= $($(MACH)_DATA:%=$(ROOTBOOTSOLARIS)/%)
@@ -50,6 +53,10 @@ CFLAGS +=	$(XSTRCONST)
 CPPFLAGS +=	-D_FILE_OFFSET_BITS=64
 
 all: $(PROG)
+
+$(PROG): $(OBJS)
+	$(LINK.c) -o $@ $(OBJS) $(LDLIBS)
+	$(POST_PROCESS)
 
 $(ROOTUSRSBINLINKS):
 	-$(RM) $@; $(SYMLINK) ../../sbin/$(@F) $@
