6421380 nm uses too many digits when formatting 64-bit hex values 6424132 elfdump inserts extra whitespace in bitmap value display

--- a/usr/src/cmd/sgs/nm/i386/Makefile
+++ b/usr/src/cmd/sgs/nm/i386/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,7 +21,7 @@
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # cmd/sgs/nm/i386/Makefile
@@ -49,8 +48,9 @@ INCLIST=	-I../../include -I../../include/i386 \
 DEFLIST=	-DTARGET=I386 -DI386=1 -D$(ARFORMAT) -DELF
 CPPFLAGS=	$(INCLIST) $(DEFLIST) $(CPPFLAGS.master)
 LDLIBS +=	-L ../../sgsdemangler/i386 -ldemangle \
-		-L ../../libconv/i386 -lconv -lelf
-LINTFLAGS +=	$(LDLIBS)
+		$(CONVLIBDIR) $(CONV_LIB) -lelf
+LINTFLAGS +=	-x $(LDLIBS)
+LINTSRCS=	$(SRCS)
 CLEANFILES +=	$(LINTOUT)
 objs.xpg4/%.o := CPPFLAGS += -DXPG4
 
@@ -92,9 +92,7 @@ install:	all $(ROOTCCSBINPROG) $(ROOTXPG4PROG)
 clean:
 		$(RM) $(OBJS) $(XPG4OBJS) $(CLEANFILES)
 
-lint:		$(LINTOUT)
+lint:		 $(LINTOUT32) $(SGSLINTOUT)
 
-$(LINTOUT):	$(SRCS)
-		$(LINT.c) $(SRCS) > $(LINTOUT) 2>&1
 
-include		../../../Makefile.targ
+include		../../Makefile.targ
