--- a/usr/src/cmd/sgs/packages/Makefile
+++ b/usr/src/cmd/sgs/packages/Makefile
@@ -75,10 +75,12 @@ PKGDIRS=	../libcrle \
 		../libld \
 		../elfdump \
 		../crle \
+		../dump \
 		../lari \
 		../ld \
 		../ldd \
 		../ldprof \
+		../nm \
 		../mcs \
 		../moe \
 		../pvs
