--- a/usr/src/cmd/sgs/packages/Makefile.lint
+++ b/usr/src/cmd/sgs/packages/Makefile.lint
@@ -59,8 +59,10 @@ LINTLDIRS=	../libld \
 		../sgsdemangler \
 		../elfdump \
 		../crle \
+		../dump \
 		../ld \
 		../ldd \
+		../nm \
 		../mcs \
 		../moe \
 		../pvs
