--- a/usr/src/cmd/sgs/nm/amd64/Makefile
+++ b/usr/src/cmd/sgs/nm/amd64/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -40,12 +39,13 @@ OBJS=		$(COMOBJS)
 SRCS=		$(COMOBJS:%.o=../common/%.c)
 
 LDFLAGS +=	'-R$$ORIGIN/../../../lib/$(MACH64)'
-INCLIST=	-I../../include -I../../include/sparc \
+INCLIST=	-I../../include -I../../include/i386 \
 		-I$(SRCBASE)/uts/$(ARCH)/sys
 CPPFLAGS=	$(INCLIST) $(DEFLIST) $(CPPFLAGS.master)
 LDLIBS +=	-L ../../sgsdemangler/amd64 -ldemangle \
-		-L ../../libconv/amd64 -lconv -lelf
-LINTFLAGS64=	-mx $(LDLIBS) -Xarch=amd64
+		$(CONVLIBDIR64) $(CONV_LIB) -lelf
+LINTFLAGS64 +=	-x $(LDLIBS) -Xarch=amd64
+LINTSRCS=	$(SRCS)
 CLEANFILES +=	$(LINTOUT)
 
 
@@ -69,10 +69,8 @@ install:	all $(ROOTCCSBINPROG64)
 clean:
 		$(RM) $(OBJS) $(CLEANFILES)
 
-lint:		$(LINTOUT)
+lint:		$(LINTOUT64) $(SGSLINTOUT)
 
-$(LINTOUT):	$(SRCS)
-		$(LINT.c) $(SRCS) > $(LINTOUT) 2>&1
 
-include		../../../Makefile.targ
+include		../../Makefile.targ
 include		../../Makefile.sub.64
