--- a/usr/src/cmd/sgs/nm/sparcv9/Makefile
+++ b/usr/src/cmd/sgs/nm/sparcv9/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -47,8 +46,9 @@ INCLIST=	-I../../include -I../../include/sparc \
 DEFLIST=	-DTARGET=SPARC -DSPARC=1 -D$(ARFORMAT) -DELF
 CPPFLAGS=	$(INCLIST) $(DEFLIST) $(CPPFLAGS.master)
 LDLIBS +=	-L ../../sgsdemangler/sparcv9 -ldemangle \
-		-L ../../libconv/sparcv9 -lconv -lelf
-LINTFLAGS64=	-mx $(LDLIBS) -Xarch=v9
+		$(CONVLIBDIR64) $(CONV_LIB) -lelf
+LINTFLAGS64=	-x $(LDLIBS) -Xarch=v9
+LINTSRCS=	$(SRCS)
 CLEANFILES +=	$(LINTOUT)
 
 
@@ -72,10 +72,7 @@ install:	all $(ROOTCCSBINPROG64)
 clean:
 		$(RM) $(OBJS) $(CLEANFILES)
 
-lint:		$(LINTOUT)
+lint:		 $(LINTOUT64) $(SGSLINTOUT)
 
-$(LINTOUT):	$(SRCS)
-		$(LINT.c) $(SRCS) > $(LINTOUT) 2>&1
-
-include		../../../Makefile.targ
+include		../../Makefile.targ
 include		../../Makefile.sub.64
