6421380 nm uses too many digits when formatting 64-bit hex values (fix clobber)

--- a/usr/src/cmd/sgs/nm/amd64/Makefile
+++ b/usr/src/cmd/sgs/nm/amd64/Makefile
@@ -73,4 +73,5 @@ lint:		$(LINTOUT64) $(SGSLINTOUT)
 
 
 include		../../Makefile.targ
+include		../../../Makefile.targ
 include		../../Makefile.sub.64
