--- a/usr/src/cmd/sgs/nm/sparcv9/Makefile
+++ b/usr/src/cmd/sgs/nm/sparcv9/Makefile
@@ -75,4 +75,5 @@ clean:
 lint:		 $(LINTOUT64) $(SGSLINTOUT)
 
 include		../../Makefile.targ
+include		../../../Makefile.targ
 include		../../Makefile.sub.64
