--- a/usr/src/uts/sun4u/Makefile.sun4u.shared
+++ b/usr/src/uts/sun4u/Makefile.sun4u.shared
@@ -394,6 +394,7 @@ DRV_KMODS	+= rmc_comm
 DRV_KMODS	+= rmcadm
 DRV_KMODS	+= rmclomv
 DRV_KMODS	+= wrsmd
+DRV_KMODS	+= sf
 
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= ctsmc
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= i2bsc 
@@ -401,7 +402,6 @@ $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= m1535ppm
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= memtest
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= mi2cv
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= scmi2c
-$(CLOSED_BUILD)CLOSED_DRV_KMODS	+= sf
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= smbus_ara
 
 #
