6349862 Enhance CPU/memory DE to enable offlining of a core 6371683 On Panther, an L2 or L3 fault should offline both cores, not just the detecting core. 6408988 On Panther, on an L2 or L3 xxU, cpumem DE needs to check two UE caches 6449076 cpumem-diagnosis aborts if CPU is missing from system on reboot

--- a/usr/src/cmd/fm/modules/Makefile.plugin
+++ b/usr/src/cmd/fm/modules/Makefile.plugin
@@ -57,12 +57,13 @@ LINTFLAGS += -mu
 LINTFILES = $(SRCS:%.c=%.ln)
 
 APIMAP = ../../../fmd/common/fmd_api.map
+FMRIMAP = ../../../fmd/common/fmd_fmri.map
 
 CFLAGS += $(CTF_FLAGS) $(CCVERBOSE) $(XSTRCONST) $(CC_PICFLAGS)
 CFLAGS += -G $(XREGSFLAG) 
 
 CPPFLAGS += -D_POSIX_PTHREAD_SEMANTICS -D_REENTRANT
-LDFLAGS += $(ZTEXT) $(ZCOMBRELOC) $(ZDEFS) $(ZIGNORE) -M$(APIMAP)
+LDFLAGS += $(ZTEXT) $(ZCOMBRELOC) $(ZDEFS) $(ZIGNORE) -M$(APIMAP) -M$(FMRIMAP)
 LDLIBS += -lnvpair -lc
 
 all: $(PROG)
