--- a/usr/src/uts/sun/io/scsi/targets/st.conf
+++ b/usr/src/uts/sun/io/scsi/targets/st.conf
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,8 +19,8 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
-#  Use is subject to license terms.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 
 #
@@ -34,7 +33,7 @@
 #
 #
 # A non configured drive will say Unconfigured Drive: and have single quoted
-# Vendor and Product strings displayed when it's status is checked with mt.
+# Vendor and Product strings displayed when its status is checked with mt.
 #
 # mt -f /dev/rmt/# status
 # Unconfigured Drive: Vendor 'VENDOR  ' Product 'A Product ID    '
