6278422 Need to support new ontario platform SPARC-Enterprise-T2000 for fujitsu re-branding 6446309 Need to support new Erie platform SPARC-Enterprise-T1000 for fujitsu re-branding

--- a/usr/src/uts/sun4v/Makefile.sun4v.shared
+++ b/usr/src/uts/sun4v/Makefile.sun4v.shared
@@ -34,6 +34,7 @@
 #
 PLATFORM	 = sun4v
 LINKED_PLATFORMS += SUNW,Sun-Fire-T1000
+LINKED_PLATFORMS += SUNW,SPARC-Enterprise-T1000
 PROMIF		 = ieee1275
 PSMBASE		 = $(UTSBASE)/../psm
 
