--- a/usr/src/uts/sun4v/ontario/Makefile
+++ b/usr/src/uts/sun4v/ontario/Makefile
@@ -68,8 +68,11 @@ modlintlib:   $(ONTARIO_KMODS)
 
 IMPLEMENTED_PLATFORM	= SUNW,Sun-Fire-T200
 LINKED_PLATFORMS	= SUNW,Sun-Fire-T1000
+LINKED_PLATFORMS	+= SUNW,SPARC-Enterprise-T1000
 LINKED_PLATFORMS	+= SUNW,Netra-T2000
+LINKED_PLATFORMS	+= SUNW,SPARC-Enterprise-T2000
 PPLINKED_PLATFORMS	= SUNW,Netra-T2000
+PPLINKED_PLATFORMS	+= SUNW,SPARC-Enterprise-T2000
 
 install:	$(ROOT_ONTARIO_DIR) $(USR_ONTARIO_DIR) \
 		$(USR_ONTARIO_SBIN_DIR) \
