6311077 Enabling ON compilation with Sun Studio 11 (Venus)

--- a/usr/src/lib/gss_mechs/mech_krb5/sparc/Makefile
+++ b/usr/src/lib/gss_mechs/mech_krb5/sparc/Makefile
@@ -1,5 +1,5 @@
 #
-# Copyright 2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -8,6 +8,8 @@
 
 MAPDIR= ../spec/sparc
 include ../Makefile.com
+
+sparc_C_PICFLAGS = $(C_BIGPICFLAGS)
 
 .KEEP_STATE:
 
