--- a/usr/src/lib/gss_mechs/mech_krb5/sparcv9/Makefile
+++ b/usr/src/lib/gss_mechs/mech_krb5/sparcv9/Makefile
@@ -1,5 +1,5 @@
 #
-# Copyright 2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -9,6 +9,8 @@
 MAPDIR= ../spec/sparcv9
 include ../Makefile.com
 include ../../../Makefile.lib.64
+
+sparcv9_C_PICFLAGS = $(C_BIGPICFLAGS64)
 
 .KEEP_STATE:
 
