--- a/usr/src/uts/sun4v/Makefile.sun4v.shared
+++ b/usr/src/uts/sun4v/Makefile.sun4v.shared
@@ -167,6 +167,8 @@ CFLAGS		+= $(CERRWARN)
 CFLAGS		+= $(CTF_FLAGS)
 CFLAGS		+= $(C99MODE)
 CFLAGS		+= $(CCUNBOUND)
+CFLAGS		+= $(CCSTATICSYM)
+CFLAGS		+= $(IROPTFLAG)
 CFLAGS		+= -xregs=no%float
 CPPFLAGS	+= -DGLREG
 
