6446807 cardbus hotplug event may occasionally cause panic 6450830 System hangs when inserting Realtek Ethernet CardBus PC Card

--- a/usr/src/uts/sparc/pcic/Makefile
+++ b/usr/src/uts/sparc/pcic/Makefile
@@ -73,7 +73,7 @@ CLEANLINTFILES	+= $(LINT64_FILES)
 # lint pass one enforcement
 #
 CFLAGS += $(CCVERBOSE)
-CPPFLAGS        +=      -DCARDBUS
+CPPFLAGS        +=      -DCARDBUS -DHOTPLUG
 
 #	dependency
 LDFLAGS	+=	-dy -Nmisc/busra -Nmisc/pcmcia -Nmisc/cardbus
