--- a/usr/src/uts/i86pc/pcic/Makefile
+++ b/usr/src/uts/i86pc/pcic/Makefile
@@ -58,7 +58,7 @@ ALL_TARGET	= $(BINARY) $(SRC_CONFILE)
 LINT_TARGET	= $(MODULE).lint
 INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_CONFFILE)
 
-CPPFLAGS	+=	-DCARDBUS
+CPPFLAGS	+=	-DCARDBUS -DHOTPLUG
 #
 #	Dependency
 #
